--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ html {
   margin-top: 30px;
 }
 
+.nav-pills a:hover {
+  color: #000;
+}
+
 .nav-pills {
   display: flex;
   list-style-type: none;
