--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -34,7 +34,13 @@
 
     .header-mb {
         display: flex;
+        position: fixed;
+        background-color: #fff;
+        width: 100%;
+        z-index: 3;
+        top: 0;
     }
+    
 
     .more_samcenter {
         flex-direction: column;
@@ -65,6 +71,7 @@
 
     .container{
         position: relative;
+        margin-top: 66px;
     }
 
     .menu-lists-mb {
