--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+::selection {
+  color: white;
+  background: black;
+}
+
 html {
   text-decoration: none;
   font-weight: bold;
