--- a/css/mobile-css/galaxyS.css
+++ b/css/mobile-css/galaxyS.css
@@ -90,7 +90,7 @@ html {
 
 .menu-mb {
     margin-left: 40px;
-    margin-right: -360px;
+    margin-right: -300px;
 }
 
 .list-menu-mb {
@@ -169,7 +169,7 @@ html {
 
 .banner-z {
     position: relative;
-    background-image: url(../../img/phone/page-phone/galaxyZ/backgroundZ.png);
+    background-image: url(../../img/phone/page-phone/galaxyS/03_galaxy_s_pc.jpeg);
     width: 1440px;
     height: 328px;
     margin-top: 4%;
@@ -178,7 +178,7 @@ html {
 
 .banner-z .text-z {
     position: absolute;
-    transform: translateX(150%) translateY(220%);
+    transform: translateX(50%) translateY(220%);
     align-items: center;
     justify-content: right;
 }
@@ -190,15 +190,14 @@ html {
     display: flex;
 }
 
-
-
 .lists-phone a,
-.lists-phone a:hover{
+.lists-phone a:hover {
+    margin-top: 4%;
     text-decoration: none;
- color: #000;
- font-weight: 600;
- font-size: 16px;
- color: #000;
+    color: #000;
+    font-weight: 600;
+    font-size: 16px;
+    color: #000;
 }
 
 
@@ -215,31 +214,38 @@ html {
 }
 
 
-.infor-phone button{
+.infor-phone button {
     background-color: #000;
-    color:#fff;
+    color: #fff;
     width: 130px;
     height: 41px;
-    padding:  0 12px;
-    border-radius:24px ;
+    padding: 0 12px;
+    border-radius: 24px;
 }
 
 /* End Content */
+
 
 /* Footer */
 .footer {
     margin-top: 12%;
 }
 
+
 /* Reponsive */
-@media (max-width: 768px){
+@media (max-width: 768px) {
+
+    .logo-mb {
+    }
+
     .banner-z {
-        background-position-x:8% ;
+        background-position-x: 8%;
         margin-left: 5%;
         margin-top: 65%;
         width: 334px;
         height: 510px;
     }
+
     .banner-z .text-z {
         position: absolute;
         transform: translateX(6%) translateY(-186%);
@@ -248,7 +254,7 @@ html {
         justify-content: right;
     }
 
-   
+
     .list-phone {
         margin: 0;
         width: 165px;
@@ -260,22 +266,22 @@ html {
         height: 98px;
     }
 
-    .list-phone .buy-phone{
+    .list-phone .buy-phone {
         width: 112px;
         height: 48px;
     }
 
-    .img-phone{
+    .img-phone {
         margin-left: -16px;
     }
 
-    .list-phone p{
+    .list-phone p {
         /* margin-left: 8px; */
         padding-left: 24 px;
         font-size: 14px;
     }
 
-    .list-phone button{
+    .list-phone button {
         width: 128px;
         height: 32px;
     }
