--- a/css/mobile-css/galaxyS.css
+++ b/css/mobile-css/galaxyS.css
@@ -239,7 +239,9 @@ html {
     }
 
     .banner-z {
-        background-position-x: 8%;
+        background-size:800px 630px;
+        background-image: url(../../img/phone/page-phone/galaxyS/03_galaxy_s_mb.jpeg);
+        background-position-x: 36%;
         margin-left: 5%;
         margin-top: 65%;
         width: 334px;
@@ -257,32 +259,36 @@ html {
 
     .list-phone {
         margin: 0;
-        width: 165px;
-        height: 281px;
+        width: 145px;
+        height: 280px;
+        margin-left: 20px;
     }
 
     .list-phone img {
-        width: 152px;
+        width: 122px;
         height: 98px;
     }
 
     .list-phone .buy-phone {
         width: 112px;
-        height: 48px;
+        height: 46px;
     }
 
     .img-phone {
-        margin-left: -16px;
+        margin-left: -26px;
     }
 
     .list-phone p {
-        /* margin-left: 8px; */
-        padding-left: 24 px;
+        width: 130px;
+        /* margin-left: 8px;
+        padding-left: 24 px; */
         font-size: 14px;
+        text-overflow: ellipsis;
     }
 
     .list-phone button {
-        width: 128px;
-        height: 32px;
+        width: 120px;
+        height: 30px;
+        margin-left: 12px;
     }
 }
