--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,39 @@ html {
   border-radius: 5px;
 }
 
+
+.button-search {}
+.form-search {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background: fixed;
+  color: rgb(153, 159, 165);
+  background-color:rgb(107, 104, 104);
+}
+input:focus{
+  outline:0;}
+
+.text-name {
+  margin: auto; 
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  transform: translateX(26%) translateY(450%);
+  color: #fff;  
+  text-align: center;
+  background-color:rgba(48, 48, 48, 0.1);
+  border-bottom: solid #fff;
+  font-size: 50px;
+  width: 65%;
+}
+
 .main-nav .phone-number a {
   color: #fff;
-  text-align: center
+  text-align: center;
+  border: none;
 }
 
 .main-nav .phone-number a:hover {
@@ -85,6 +115,12 @@ html {
 }
 
 /*----Begin header mobile--- */
+
+/* css dùng cho mục xem chi tiết các sản phẩm */
+.more-phone:hover {
+  color: #000;
+  background-color: #fff;
+}
 
 .logo-mb {
   margin-left: -90px;
@@ -164,6 +200,10 @@ html {
 
 .active {
   display: flex !important;
+}
+
+.hide {
+  display: none;
 }
 
 .carousel-indicators .active {
