--- a/css/mobile-css/infor-mobile/galaxyZFlip3.css
+++ b/css/mobile-css/infor-mobile/galaxyZFlip3.css
@@ -116,6 +116,66 @@
         height: 110%;
       }
 
+      .btn-color {
+        width: 34px;
+        height: 34px;
+        border-radius:  68px;
+      }
+
+      .btn-ram{
+        font-size: 16px;
+        width: 96px;
+        height: 36px;
+        border: solid;
+        border-color: rgb(183, 178, 178);
+        border-radius: 5px  ;
+      }
+
+      .number-ric {
+        margin-top: 25%;
+        width: 55px;
+        height: 38px;
+        font-size: 16px;
+      }
+      .add-cart {
+        width: 251px ;
+        height: 38px;
+        font-size: 16px;
+        background-color: #000;
+        color: #fff;
+      }
+
+      .promotion {
+        margin-top: 8%;
+      }
+
+      .gift-promotion{
+        display: flex;
+        color: red;
+        font-size: 26px;
+        line-height: 20px;
+      }
+
+      .item-one {
+        display: flex;
+        line-height: 20px;
+        margin-top: 8px;
+        margin-bottom: 8px;
+      }
+
+      .star-item {
+        font-size: 18px;
+        margin:4px;
+      }
+
+      .text-item {
+        font-weight: 530;
+      }
+
+      .content-item p{
+        font: 16px;
+      }
+
       @media (max-width: 768px){
         .content-img {
             width: 50%;
@@ -123,3 +183,63 @@
             margin-left: 25%;
         }
       }
+
+
+/* css combo box choose store  */
+/*the container must be positioned relative:*/
+.custom-select {
+  font-size: 16px;
+  position: relative;
+  font-family: Arial;
+  border: solid 1px #000;
+}
+
+.custom-select select {
+  display: none; /*hide original SELECT element:*/
+}
+
+/*style the arrow inside the select element:*/
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/*point the arrow upwards when the select box is open (active):*/
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
+}
+
+/*style the items (options), including the selected item:*/
+.select-items div,.select-selected {
+  color: #000;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+  user-select: none;
+}
+
+/*style items (options):*/
+.select-items {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+/*hide the items when the select box is closed:*/
+.select-hide {
+  display: none;
+}
+
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
