--- a/manage/css/style_manage.css
+++ b/manage/css/style_manage.css
@@ -9,10 +9,16 @@ body {
     color: #303132;
     background-color: #efefef;
 }   
+.title {
+    display: flex;
+    justify-content: center;
+}
 .sidebar{
     background-color: #7386d5;
     /* color: #fff; */
-    /* height: 100%; */
+    /* height: 100%;
+    position: fixed; */
+
 }
 .list-page li a {
     padding: 10px;
