--- a/manage/css/style_manage.css
+++ b/manage/css/style_manage.css
@@ -2,44 +2,84 @@
     margin: 0;
     padding: 0;
 }
+
 body {
     font-family: "Open Sans", sans-serif;
     font-size: 15px;
     line-height: 1.43;
     color: #303132;
     background-color: #efefef;
-}   
+}
+
 .title {
     display: flex;
     justify-content: center;
 }
-.sidebar{
+
+.sidebar {
     background-color: #7386d5;
     /* color: #fff; */
     /* height: 100%;
     position: fixed; */
 
 }
+
 .list-page li a {
     padding: 10px;
     display: block;
     text-decoration: none;
     color: #fff;
 }
-.list-page li{
+
+.fontsize {
+    width: 200px;
+    height: 200px;
+}
+
+.list-page li {
     list-style-type: none;
 }
+
 .sidebar .sidebar-header {
     padding: 20px;
     background: #6d7fcc;
 }
+
 .sidebar ul p {
     color: #fff;
     padding: 10px;
 }
 
-.list-page li a:hover{
+.list-page li a:hover {
     background-color: #fff;
     font-weight: bold;
     color: #333;
+}
+
+#wrapper {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#form-fix {
+    max-width: 600px;
+    background: rgba(168, 97, 97, 0.8);
+    padding: 30px 30px 40px;
+    box-shadow: 0px 0px 17px 2px rgba(14, 13, 13, 0.8);
+}
+
+.form-group {
+    font-size: 14px;
+    padding-top: 20px;
+    padding-right: 10px;
+}
+
+
+.btn {
+    /* display: inline; */
+    display: flex;
+    justify-content: space-between;
+    margin: 12px;
 }
