--- a/manage/login/log_in.css
+++ b/manage/login/log_in.css
@@ -1,5 +1,5 @@
 body {
-    background: url('/WebSamCenter/manage/login/img/bg_nen.jpg');
+    background: url('../login/img/bg_nen.jpg');
     background-size: cover;
     background-position-y: -80px;
     font-size: 16px;
@@ -52,6 +52,7 @@ body {
 .form-input::placeholder {
     color: #f5f5f5;
 }
+
 
 .form-submit {
     background: transparent;
