--- a/manage/css/style_manage.css
+++ b/manage/css/style_manage.css
@@ -83,3 +83,9 @@ body {
     justify-content: space-between;
     margin: 12px;
 }
+
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
